--- a/sources/phpunit.xml.dist
+++ b/sources/phpunit.xml.dist
@@ -25,7 +25,7 @@
     </filter>
 
     <!-- remove comments for code-coverage report -->
-    <!--<logging>-->
-    <!--<log type="coverage-html" target="../coverage" charset="UTF-8" highlight="false" lowUpperBound="35" highLowerBound="70"/>-->
-    <!--</logging>-->
+    <logging>
+    <log type="coverage-html" target="../coverage" charset="UTF-8" highlight="false" lowUpperBound="35" highLowerBound="70"/>
+    </logging>
 </phpunit>
